[gd_scene load_steps=24 format=3 uid="uid://6qvmo5hbku7i"]

[ext_resource type="Script" path="res://assets/interactives/scripts/plushie.gd" id="1_kji04"]
[ext_resource type="Texture2D" uid="uid://dlinrsqhahn1g" path="res://assets/interactives/Sprites/plushies.png" id="2_rlcxn"]
[ext_resource type="AudioStream" uid="uid://blgln4afbq3pv" path="res://assets/interactives/sound effects/plushie.mp3" id="3_h4lox"]

[sub_resource type="BoxShape3D" id="BoxShape3D_17b23"]
size = Vector3(0.76416, 0.588135, 0.51326)

[sub_resource type="AtlasTexture" id="AtlasTexture_vedme"]
atlas = ExtResource("2_rlcxn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l7ua"]
atlas = ExtResource("2_rlcxn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iecli"]
atlas = ExtResource("2_rlcxn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0fah"]
atlas = ExtResource("2_rlcxn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku6wm"]
atlas = ExtResource("2_rlcxn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtnub"]
atlas = ExtResource("2_rlcxn")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vc1q"]
atlas = ExtResource("2_rlcxn")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6a48"]
atlas = ExtResource("2_rlcxn")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kjqd"]
atlas = ExtResource("2_rlcxn")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd7bc"]
atlas = ExtResource("2_rlcxn")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_btxrb"]
atlas = ExtResource("2_rlcxn")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm4kp"]
atlas = ExtResource("2_rlcxn")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_heoux"]
atlas = ExtResource("2_rlcxn")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_namlr"]
atlas = ExtResource("2_rlcxn")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u05c4"]
atlas = ExtResource("2_rlcxn")
region = Rect2(896, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_u6rxo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vedme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l7ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iecli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0fah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku6wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtnub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vc1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6a48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kjqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd7bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btxrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm4kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heoux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_namlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u05c4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_5j5oc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody3D/AnimatedSprite3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody3D/AnimatedSprite3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.166683, 0)]
}

[sub_resource type="Animation" id="Animation_4me1v"]
resource_name = "boop"
length = 0.500003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody3D/AnimatedSprite3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.35012, 0.759485, 1), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody3D/AnimatedSprite3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.166683, 0), Vector3(0, 0.115229, 0), Vector3(0, 0.166683, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yx8h5"]
_data = {
"RESET": SubResource("Animation_5j5oc"),
"boop": SubResource("Animation_4me1v")
}

[node name="plushie" type="Node3D"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
script = ExtResource("1_kji04")

[node name="StaticBody3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00463867, 0.25647, -0.00347137)
shape = SubResource("BoxShape3D_17b23")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.166683, 0)
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_u6rxo")
frame = 6

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_h4lox")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yx8h5")
}

[connection signal="body_entered" from="StaticBody3D" to="." method="_on_static_body_3d_body_entered"]
[connection signal="body_exited" from="StaticBody3D" to="." method="_on_static_body_3d_body_exited"]
